added the bg, logo ann font for customer

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Transform</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alice|Ledger|Prata" rel="stylesheet">
 </head>
 
 <body>
@@ -12,8 +13,8 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12">
-				<div class="jumbotron bg-dark text-light py-1 mb-2">
-					<h1 class="display-4 text-center">ФАБРИКА «ТРАНСФОРМЪ»</h1>
+				<div class="jumbotron block-bg-color text-light py-1 mb-2">
+					<h1 class="display-4 text-center">ФАБРИКА «ТРАНСФОРМЪ ПЛЮС»</h1>
 					<p class="lead">Основным направлением деятельности нашего предприятия является производство архитектурных фасадных элементов.</p>
 					<hr class="my-2">
 					<p>Производимые нами изделия успешно применяются в качестве архитектурного декора как для фасадов зданий, так и для украшения парков, дизайна ландшафтов, интерьеров. Мы изготавливаем изделия практически любых форм и габаритов по каталогу, либо по индивидуальным чертежам.</p>
@@ -42,7 +43,7 @@
 					</div>
 				</a>
 				<a href="">
-					<div class="used-materials tile bg-dark">
+					<div class="used-materials tile block-bg-color">
 						<h2>Используемые материалы</h2>
 						<p>Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
 					</div>
