before I try to create card-component for all refs of website

--- a/assets/src/external_finish.html
+++ b/assets/src/external_finish.html
@@ -22,14 +22,16 @@
 			</section>
 			<div class="row">
 				<div class="col-12 col-md-3">
-					<a href="#">
-						<div class="cards card-1">
+
+					<div class="cards card-1">
+						<a href="">
 							<div class="wrapper-blackout">
-								<h6>Карнизы, межэтажные пояса</h6>
+								<h6 class="bg-shadow">Карнизы, межэтажные пояса</h6>
 
 							</div>
-						</div>
-					</a>
+						</a>
+					</div>
+
 				</div>
 				<div class="col-12 col-md-3">
 					<a href="#">
@@ -99,6 +101,20 @@
 							<div class="wrapper-blackout">
 								<h6> Крышки на столбы и парапетные</h6>
 
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12 col-md-4">
+					<a href="#">
+						<div class="" id="#">
+							<div class="wrapper-blackout">
+								<div class="tile">
+									<h2 class="bg-shadow">Негабаритые изделия рекламного назначения</h2>
+									<p class="bg-shadow d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
+								</div>
 							</div>
 						</div>
 					</a>
