--- a/assets/src/external_finish.html
+++ b/assets/src/external_finish.html
@@ -111,10 +111,8 @@
 					<a href="#">
 						<div class="" id="#">
 							<div class="wrapper-blackout">
-								<div class="tile">
-									<h2 class="bg-shadow">Негабаритые изделия рекламного назначения</h2>
-									<p class="bg-shadow d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
-								</div>
+									<h2 class="">Негабаритые изделия рекламного назначения</h2>
+									<p class="d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
 							</div>
 						</div>
 					</a>
