added aside page and internal finish

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
@@ -88,9 +88,7 @@
 				</a>
 			</div>
 			<div class="d-none d-lg-block col-lg-4">
-				<aside class="border">
-
-				</aside>
+				//= template/aside.html
 			</div>
 			<div class="col-12">
 				<img src="..." class="img-fluid" alt="Responsive image">
@@ -123,9 +121,7 @@
 			</div>
 
 			<div class="d-none d-md-block col-lg-4">
-				<aside class="border">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut reiciendis et recusandae, corporis voluptates sunt dolore eos fuga odit earum nobis veritatis quos, neque, repudiandae deserunt incidunt facilis nesciunt aperiam?
-				</aside>
+
 			</div>
 		</section>
 		//= template/footer.html
