--- a/assets/src/contacts.html
+++ b/assets/src/contacts.html
@@ -11,7 +11,11 @@
 <body>
 	<div class="container-fluid">
 		//= template/header.html
+		<section class="row">
+			<div class="col-12">
 
+			</div>
+		</section>
 		//= template/footer.html
 	</div>
 	<script src="js/main.js"></script>
