--- a/assets/src/examples_of_our_artwork.html
+++ b/assets/src/examples_of_our_artwork.html
@@ -11,7 +11,9 @@
 <body>
 	<div class="container-fluid">
 		//= template/header.html
+		<section class="row">
 
+		</section>
 		//= template/footer.html
 	</div>
 	<script src="js/main.js"></script>
