--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -11,7 +11,8 @@
 <body>
 	<div class="container-fluid">
 		//= template/header.html
-		<section class="row">
+
+		<div class="row">
 			<div class="col-md-12">
 				<div id="carouselExampleControls" class="carousel slide my-1 d-none d-md-block" data-ride="carousel">
 					<div class="carousel-inner">
@@ -39,13 +40,13 @@
 						</div>
 					</div>
 					<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
+			    					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    					<span class="sr-only">Previous</span>
+			  		</a>
 					<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+			    					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    					<span class="sr-only">Next</span>
+			  		</a>
 				</div>
 			</div>
 			<div class="col-12">
@@ -59,69 +60,77 @@
 					</p>
 				</div>
 			</div>
-			<div class="col-12 col-md-6 col-lg-5">
-				<a href="">
-					<div class="card-01" id="#">
-						<div class="wrapper-blackout">
-							<h2>Внешняя отделка зданий</h2>
-							<p class=" d-none d-md-block">Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
-						</div>
+		</div>
+		<section class="row">
+			<div class="col-12 col-md-9 col-lg-9">
+				<div class="row">
+					<div class="col-12 col-md-6 col-lg-7">
+						<a href="">
+							<div class="card-01" id="#">
+								<div class="wrapper-blackout">
+									<h2>Внешняя отделка зданий</h2>
+									<p class=" d-none d-md-block">Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
+								</div>
+							</div>
+						</a>
 					</div>
-				</a>
-			</div>
-			<div class="col-12 col-md-6 col-lg-3">
-				<a href="">
-					<div class="card-02 mb-2" id="#">
-						<div class="wrapper-blackout">
-							<h2 class="">Балюстрады</h2>
-							<p class=" d-none d-md-block">Выполнены из фасадного армированного пенополистирола на металлокаркасе.</p>
-						</div>
+					<div class="col-12 col-md-6 col-lg-5">
+						<a href="">
+							<div class="card-02 mb-2" id="#">
+								<div class="wrapper-blackout">
+									<h2 class="">Балюстрады</h2>
+									<p class=" d-none d-md-block">Выполнены из фасадного армированного пенополистирола на металлокаркасе.</p>
+								</div>
+							</div>
+						</a>
+						<a href="">
+							<div class="card-03 block-bg-color" id="#">
+								<div class="wrapper-blackout">
+									<h2>Используемые материалы</h2>
+									<p class="d-none d-md-block">Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
+								</div>
+							</div>
+						</a>
 					</div>
-				</a>
-				<a href="">
-					<div class="card-03 block-bg-color" id="#">
-						<div class="wrapper-blackout">
-							<h2>Используемые материалы</h2>
-							<p class="d-none d-md-block">Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
-						</div>
+					<div class="d-none d-lg-block col-lg-5">
 					</div>
-				</a>
-			</div>
-			<div class="d-none d-lg-block col-lg-4">
-				//= template/aside.html
-			</div>
-			<div class="col-12">
-				<img src="..." class="img-fluid" alt="Responsive image">
-			</div>
-			<div class="col-12 col-md-6 col-lg-3">
-				<a href="">
-					<div class="card-04 border mb-2 p-2" id="#">
-						<h2>Внутреннее оформление помещений</h2>
-						<p class="">Hоваторский способ внутренней отделки квартир, домов и офисов, позволяющий решить проблему исключительного принципа «цена-качество».</p>
+					<div class="col-12">
+						<img src="..." class="img-fluid" alt="Responsive image">
 					</div>
-				</a>
-				<a href="">
-					<div class="card-05" id="#">
-						<div class="wrapper-blackout">
-							<h2 class="">Оконные и дверные проемы</h2>
-							<p class=" d-none d-md-block">Заставляют Ваш дом выглядеть дорого и роскошно, стильно и неординарно.</p>
-						</div>
+					<div class="col-12 col-md-6 col-lg-5">
+						<a href="">
+							<div class="card-04 border mb-2 p-2" id="#">
+								<h2>Внутреннее оформление помещений</h2>
+								<p class="">Hоваторский способ внутренней отделки квартир, домов и офисов, позволяющий решить проблему исключительного принципа «цена-качество».</p>
+							</div>
+						</a>
+						<a href="">
+							<div class="card-05" id="#">
+								<div class="wrapper-blackout">
+									<h2 class="">Оконные и дверные проемы</h2>
+									<p class=" d-none d-md-block">Заставляют Ваш дом выглядеть дорого и роскошно, стильно и неординарно.</p>
+								</div>
+							</div>
+						</a>
 					</div>
-				</a>
-			</div>
-			<div class="col-12 col-md-6 col-lg-5">
-				<a href="">
-					<div class="card-06" id="#">
-						<div class="wrapper-blackout">
-							<h2 class="">Негабаритые изделия рекламного назначения</h2>
-							<p class="d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
-						</div>
+					<div class="col-12 col-md-6 col-lg-7">
+						<a href="">
+							<div class="card-06" id="#">
+								<div class="wrapper-blackout">
+									<h2 class="">Негабаритые изделия рекламного назначения</h2>
+									<p class="d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
+								</div>
+							</div>
+						</a>
 					</div>
-				</a>
-			</div>
 
-			<div class="d-none d-md-block col-lg-4">
+					<div class="d-none d-md-block col-lg-4">
 
+					</div>
+				</div>
+			</div>
+			<div class="d-none d-md-block col-md-3">
+						//= template/aside.html
 			</div>
 		</section>
 		//= template/footer.html
