--- a/assets/src/examples_of_windows.html
+++ b/assets/src/examples_of_windows.html
@@ -12,7 +12,12 @@
 	<div class="container-fluid">
 		//= template/header.html
 		<section class="row">
-
+			<div class="col-12 col-md-9">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptatum sit recusandae, doloremque hic cum aspernatur ullam maxime excepturi quam possimus eos expedita aut nulla odit sed quidem, fuga modi.
+			</div>
+			<div class="d-none d-md-block col-md-3">
+				//= template/aside.html
+			</div>
 		</section>
 		//= template/footer.html
 	</div>
