--- a/assets/src/contacts.html
+++ b/assets/src/contacts.html
@@ -13,7 +13,23 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptatum sit recusandae, doloremque hic cum aspernatur ullam maxime excepturi quam possimus eos expedita aut nulla odit sed quidem, fuga modi.
+				<div class="contacts_and_map px-1 px-md-5">
+
+
+					<h1 class="text-center mt-4">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ
+						<div class="md-display-3">ТРАНСФОРМЪ</div>
+					</h1>
+					<div>
+						<p class="my-4">Адрес: 350004, г. Краснодар, ул. Кожевенная, д. 18</p>
+						<p class="my-4">Телефон/факс: (861) 298-08-98, (861) 298-08-80 </p>
+						<p class="my-4">Cотовый: +7 (918) 688-44-42</p>
+						<p class="my-4">Электронная почта: transform.krr@yandex.ru, transform.krr@gmail.com</p>
+						<p class="my-4">Режим работы: с понедельника по пятницу с 9-00 до 18-00 без перерыва, суббота и воскресенье — выходные</p>
+					</div>
+					<div class="yandex-map border mt-5" id="yandex-map">
+						<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A45abe471287bc213db7b8645f385c6f2646ba5320be25f8af88440d3ee506f96&amp;source=constructor" width="100%" height="400" frameborder="0"></iframe>
+					</div>
+				</div>
 			</div>
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
