--- a/assets/src/external_finish.html
+++ b/assets/src/external_finish.html
@@ -11,131 +11,131 @@
 <body>
 	<div class="container-fluid">
 		//= template/header.html
-		<section class="row">
-			<div class="col-12 col-md-9">
-<main>
-			<section class="content-ex">
-				<h1>Элементы внешней отделки зданий</h1>
-				<p>Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
-				<p>В представленном нами ниже кратком каталоге Вы не увидите ни одного размера декоративных элементов, потому что размеры, как и любые другие конфигурации и формы, мы хотели бы в качестве предложений или утверждений получать от Вас. А наши специалисты помогут Вам понять, сохранит ли в тех или иных размерах выбранная из каталога либо предложенная Вами деталь свои первоначально заданные пропорции.</p>
-				<p>Технология терморезки пенополистирола, используемая в нашем производстве, уникальна в первую очередь тем, что для изготовления любого декоративного элемента не требуется вспомогательных форм или приспособлений. Достаточно наличия чертежа нужного элемента с проставленными размерами, а дальше мы вырезаем нужную деталь из пенополистирола с точностью до 2 мм. Габариты изделия не имеют значения, поскольку предлагаемый нами материал прекрасно стыкуется между собой посредством склеивания и других используемых нами методов, обеспечивающих надлежащее качество.</p>
-				<p>Сам по себе пенополистирол относительно хрупок, но все меняет дальнейшая обработка вырезанного из него изделия. Наносимые покрытия с обязательным использованием армирующей стеклосетки или стекловолокна придадут изделию из пенополистирола высокую прочность и долговечность.</p>
-				<p>После всего, что Вы увидите в нашем каталоге, и если что-либо Вас заинтересует, мы надеемся не разочаровать Вас в нашем возможном совместном сотрудничестве! А главное, помните, что данный каталог — это всего лишь малая толика наших возможностей. Мы также с удовольствием примем и учтем Ваши пожелания по изготовлению деталей, придуманных или найденных Вами самостоятельно в других источниках</p>
+		<div class="external_finished px-1 px-md-5">
+			<section class="row">
+				<div class="col-12 col-md-9">
+					<main>
+						<section class="content-ex">
+							<h1>Элементы внешней отделки зданий</h1>
+							<p>Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
+							<p>В представленном нами ниже кратком каталоге Вы не увидите ни одного размера декоративных элементов, потому что размеры, как и любые другие конфигурации и формы, мы хотели бы в качестве предложений или утверждений получать от Вас. А наши специалисты помогут Вам понять, сохранит ли в тех или иных размерах выбранная из каталога либо предложенная Вами деталь свои первоначально заданные пропорции.</p>
+							<p>Технология терморезки пенополистирола, используемая в нашем производстве, уникальна в первую очередь тем, что для изготовления любого декоративного элемента не требуется вспомогательных форм или приспособлений. Достаточно наличия чертежа нужного элемента с проставленными размерами, а дальше мы вырезаем нужную деталь из пенополистирола с точностью до 2 мм. Габариты изделия не имеют значения, поскольку предлагаемый нами материал прекрасно стыкуется между собой посредством склеивания и других используемых нами методов, обеспечивающих надлежащее качество.</p>
+							<p>Сам по себе пенополистирол относительно хрупок, но все меняет дальнейшая обработка вырезанного из него изделия. Наносимые покрытия с обязательным использованием армирующей стеклосетки или стекловолокна придадут изделию из пенополистирола высокую прочность и долговечность.</p>
+							<p>После всего, что Вы увидите в нашем каталоге, и если что-либо Вас заинтересует, мы надеемся не разочаровать Вас в нашем возможном совместном сотрудничестве! А главное, помните, что данный каталог — это всего лишь малая толика наших возможностей. Мы также с удовольствием примем и учтем Ваши пожелания по изготовлению деталей, придуманных или найденных Вами самостоятельно в других источниках</p>
+						</section>
+						<div class="row">
+							<div class="col-12 col-md-4">
+								<a href="">
+									<div class="card-ex card-ex-01" id="#">
+										<div class="wrapper-blackout">
+											<h5>Карнизы, межэтажные пояса</h5>
+
+										</div>
+									</div>
+								</a>
+
+							</div>
+							<div class="col-12 col-md-4">
+								<a href="">
+									<div class="card-ex card-ex-02" id="#">
+										<div class="wrapper-blackout">
+											<h5>Наличники. подоконники</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-12 col-md-4">
+								<a href="">
+									<div class="card-ex card-ex-03" id="#">
+										<div class="wrapper-blackout">
+											<h5>Камни замковые, камни рустовые, кронштейны. триглифы</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-12 col-md-3">
+								<a href="">
+									<div class="card-ex card-ex-04" id="#">
+										<div class="wrapper-blackout">
+											<h5>Тимпаны, филенки, розетки</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-12 col-md-3">
+								<a href="">
+									<div class="card-ex card-ex-05" id="#">
+										<div class="wrapper-blackout">
+											<h5>Колонны, полуколонны (тела, капители, базы)</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-12 col-md-3">
+								<a href="">
+									<div class="card-ex card-ex-06" id="#">
+										<div class="wrapper-blackout">
+											<h5>Пилястры ( тела, капители, базы)</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-12 col-md-3">
+								<a href="">
+									<div class="card-ex card-ex-07" id="#">
+										<div class="wrapper-blackout">
+											<h5>Балясины, полубалясины, навершия</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-12 col-md-4">
+								<a href="">
+									<div class="card-ex card-ex-08" id="#">
+										<div class="wrapper-blackout">
+											<h5>Крышки на столбы и парапетные</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-12 col-md-4">
+								<a href="">
+									<div class="card-ex card-ex-09" id="#">
+										<div class="wrapper-blackout">
+											<h5>Негабаритное. Цифры,буквы, логотипы,макеты</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+							<div class="col-12 col-md-4">
+								<a href="">
+									<div class="card-ex card-ex-10" id="#">
+										<div class="wrapper-blackout">
+											<h5>Стеновые панели, панно</h5>
+
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
+					</main>
+				</div>
+				<div class="d-none d-md-block col-md-3">
+					//= template/aside.html
+				</div>
 			</section>
-			<div class="row">
-				<div class="col-12 col-md-4">
-					<a href="">
-						<div class="card-ex card-ex-01" id="#">
-							<div class="wrapper-blackout">
-								<h5>Карнизы, межэтажные пояса</h5>
-
-							</div>
-						</div>
-					</a>
-
-				</div>
-				<div class="col-12 col-md-4">
-					<a href="">
-						<div class="card-ex card-ex-02" id="#">
-							<div class="wrapper-blackout">
-								<h5>Наличники. подоконники</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-12 col-md-4">
-					<a href="">
-						<div class="card-ex card-ex-03" id="#">
-							<div class="wrapper-blackout">
-								<h5>Камни замковые, камни рустовые, кронштейны. триглифы</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-12 col-md-3">
-					<a href="">
-						<div class="card-ex card-ex-04" id="#">
-							<div class="wrapper-blackout">
-								<h5>Тимпаны, филенки, розетки</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-12 col-md-3">
-					<a href="">
-						<div class="card-ex card-ex-05" id="#">
-							<div class="wrapper-blackout">
-								<h5>Колонны, полуколонны (тела, капители, базы)</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-12 col-md-3">
-					<a href="">
-						<div class="card-ex card-ex-06" id="#">
-							<div class="wrapper-blackout">
-								<h5>Пилястры ( тела, капители, базы)</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-12 col-md-3">
-					<a href="">
-						<div class="card-ex card-ex-07" id="#">
-							<div class="wrapper-blackout">
-								<h5>Балясины, полубалясины, навершия</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-12 col-md-4">
-					<a href="">
-						<div class="card-ex card-ex-08" id="#">
-							<div class="wrapper-blackout">
-								<h5>Крышки на столбы и парапетные</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-12 col-md-4">
-					<a href="">
-						<div class="card-ex card-ex-09" id="#">
-							<div class="wrapper-blackout">
-								<h5>Негабаритное.Цифры,буквы, логотипы,макеты</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-12 col-md-4">
-					<a href="">
-						<div class="card-ex card-ex-10" id="#">
-							<div class="wrapper-blackout">
-								<h5>Стеновые панели, панно</h5>
-
-							</div>
-						</div>
-					</a>
-				</div>
-			</div>
-		</main>
-			</div>
-			<div class="d-none d-md-block col-md-3">
-				//= template/aside.html
-			</div>
-		</section>
+		</div>
 		//= template/footer.html
 	</div>
 	<script src="js/main.js"></script>
 </body>
 
 </html>
-
-
