--- a/assets/src/using_materials.html
+++ b/assets/src/using_materials.html
@@ -13,7 +13,26 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptatum sit recusandae, doloremque hic cum aspernatur ullam maxime excepturi quam possimus eos expedita aut nulla odit sed quidem, fuga modi.
+				<div class="about_materials mt-4 px-1 px-md-5">
+				<h1>Используемые материалы</h1>
+					<p>Мы работаем на российском рынке исключительно с сертифицированными системами, т.е. все покрытия, которые мы используем для нанесения на пенопластовые изделия, имеют все возможные соответствующие документы для систем теплоизоляции фасадов, включая одобрение Госстроя РФ.</p>
+
+					<p>Самым прочным и соответственно самым дорогим покрытием считается акриловый адгезионно-клеевой состав «ЛАЭС» (производство Самара, Россия, сополимеры и кварцевые наполнители – Нидерланды, США). Он имеет самые высокие технико-физические показатели, и его срок службы на Северном Кавказе – не менее 30 лет, в районах с более суровым зимним климатом (где меньше природных температурных перепадов) – не менее 48 лет.</p>
+
+					<p>Несколько приближенным к эконом-варианту является другое используемое нами покрытие на основе сухих строительных смесей – Мурексин (производство Австрия, завод находится на территории России). Гарантийный срок службы изделий с таким покрытием – не менее 5-7 лет.</p>
+
+					<p>Полным эконом-вариантом, предлагаемым нами, является покрытие на основе сухих строительных смесей – Баумит (производство Австрия, завод находится на территории России). Гарантийный срок службы изделий с таким покрытием – не менее 3 лет (по законодательству РФ).</p>
+
+					<p>Все вышеперечисленные покрытия наносятся на пенополистирольные изделия с обязательным использованием армирующей антищелочной стеклосетки с ячейками 5×5 мм и плотностью 90-160 г/кв.м. И только штучные изделия небольших размеров покрываются без армирующей стеклосетки клеем «ЛАЭС-декор», в составе которого есть армирующее стекловолокно. А на большие или погонажные изделия такой клей наносить строго не рекомендуется.</p>
+
+					<p>Заказчик должен отчетливо осознавать, что отсутствие на изделиях армирующей стеклосетки придает им не только меньшую финансовую цену, но и реальные разрушительные риски при эксплуатации такого изделия. Поэтому при выборе производителя архитектурного декора нужно огромное внимание уделять технологии нанесения покрытий с явным предпочтением их армирования стеклосетками в целях долговечности.</p>
+
+					<p>В целях экономии средств заказчика мы можем предлагать ему некоторые комбинации покрытий, а также готовы предоставить качественную информацию по экономии при монтаже. Можем предложить изготовление деталей по принципу декора из камня – с технологическими швами.</p>
+
+					<p>Пожалуйста, помните, что цены на изделия, которые мы предварительно Вам озвучиваем, являются среднерозничными и неокончательными. Лишь когда мы с Вами совершенно точно обговариваем и устанавливаем перечень, размер, количество и степень сложности нужных Вам деталей, только тогда формируется окончательная цена. Мы всегда идем навстречу клиенту и предоставляем различные скидки в зависимости от объема заказанных деталей, от их сложности, а также от формы расчета – наличной или безналичной.</p>
+
+					<p>Не отказывайтесь от наших услуг, если речь касается только стоимости! Приходите, и мы найдем компромисс! Ибо за 9 лет работы в Краснодаре и других городах России нам есть, чем гордиться!</p>
+				</div>
 			</div>
 			<div class="d-none d-md-block col-md-3">
 				//= template/aside.html
