--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 			<div class="col-12">
-				<div class="jumbotron block-bg-color text-light py-1 mb-2">
+				<div class="jumbotron block-bg-color text-light py-3 mb-2">
 					<h1 class="d-none d-md-block display-4 text-center">ФАБРИКА «ТРАНСФОРМЪ ПЛЮС»</h1>
 					<p class="lead">Основным направлением деятельности нашего предприятия является производство архитектурных фасадных элементов.</p>
 					<hr class="my-2">
@@ -65,8 +65,8 @@
 			<div class="col-12 col-md-9 col-lg-9">
 				<div class="row">
 					<div class="col-12 col-md-6 col-lg-7">
-						<a href="">
-							<div class="card-01" id="#">
+						<a href="external_finish.html">
+							<div class="card-01 mb-1 mb-md-0" id="#">
 								<div class="wrapper-blackout">
 									<h2>Внешняя отделка зданий</h2>
 									<p class=" d-none d-md-block">Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
@@ -76,7 +76,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-5">
 						<a href="">
-							<div class="card-02 mb-2" id="#">
+							<div class="card-02 mb-1 mb-md-2" id="#">
 								<div class="wrapper-blackout">
 									<h2 class="">Балюстрады</h2>
 									<p class=" d-none d-md-block">Выполнены из фасадного армированного пенополистирола на металлокаркасе.</p>
@@ -84,7 +84,7 @@
 							</div>
 						</a>
 						<a href="">
-							<div class="card-03 block-bg-color" id="#">
+							<div class="card-03 mb-1 mb-md-0 block-bg-color" id="#">
 								<div class="wrapper-blackout">
 									<h2>Используемые материалы</h2>
 									<p class="d-none d-md-block">Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
@@ -95,17 +95,27 @@
 					<div class="d-none d-lg-block col-lg-5">
 					</div>
 					<div class="col-12">
-						<img src="..." class="img-fluid" alt="Responsive image">
+
+						<div class="jumbotron jumbotron-fluid block-bg-color text-light py-5 my-2">
+							<div class="container">
+								<h3>Мы профессионалы высочайшего класса</h3>
+								<p class="lead">Мы используем весь свой многолетний опыт, чтобы сделать ваш дом или офис по настоящему уникальными.</p>
+							</div>
+						</div>
+
 					</div>
 					<div class="col-12 col-md-6 col-lg-5">
+
 						<a href="">
-							<div class="card-04 border mb-2 p-2" id="#">
-								<h2>Внутреннее оформление помещений</h2>
-								<p class="">Hоваторский способ внутренней отделки квартир, домов и офисов, позволяющий решить проблему исключительного принципа «цена-качество».</p>
+							<div class="card-04 mb-1 mb-md-2" id="#">
+								<div class="wrapper-blackout">
+									<h2 class="">Внутреннее оформление помещений</h2>
+									<p class=" d-none d-md-block">Hоваторский способ внутренней отделки квартир, домов и офисов.</p>
+								</div>
 							</div>
 						</a>
 						<a href="">
-							<div class="card-05" id="#">
+							<div class="card-05 mb-1 mb-md-0" id="#">
 								<div class="wrapper-blackout">
 									<h2 class="">Оконные и дверные проемы</h2>
 									<p class=" d-none d-md-block">Заставляют Ваш дом выглядеть дорого и роскошно, стильно и неординарно.</p>
@@ -115,7 +125,7 @@
 					</div>
 					<div class="col-12 col-md-6 col-lg-7">
 						<a href="">
-							<div class="card-06" id="#">
+							<div class="card-06 mb-1 mb-md-0" id="#">
 								<div class="wrapper-blackout">
 									<h2 class="">Негабаритые изделия рекламного назначения</h2>
 									<p class="d-none d-md-block">Как известно, реклама — двигатель продаж. Поэтому так часто современные компании нуждаются в рекламных макетах своей продукции. Мы поможем реализовать большинство задач такого плана. Рекламные макеты, логотипы, вензеля, объемные буквы, цифры, вывески, театральные декорации, элементы декоративного оформления витрин, выставочных стендов, декоративные изделия для оформления праздников</p>
@@ -130,7 +140,7 @@
 				</div>
 			</div>
 			<div class="d-none d-md-block col-md-3">
-						//= template/aside.html
+				//= template/aside.html
 			</div>
 		</section>
 		//= template/footer.html
