added sass variables

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -50,13 +50,13 @@
 				</div>
 			</div>
 			<div class="col-12">
-				<div class="jumbotron block-bg-color text-light py-3 mb-2">
+				<div class="jumbotron block-bg-color text-color py-3 mb-2">
 					<h1 class="d-none d-md-block display-4 text-center">ФАБРИКА «ТРАНСФОРМЪ ПЛЮС»</h1>
 					<p class="lead">Основным направлением деятельности нашего предприятия является производство архитектурных фасадных элементов.</p>
 					<hr class="my-2">
 					<p class="d-none">Производимые нами изделия успешно применяются в качестве архитектурного декора как для фасадов зданий, так и для украшения парков, дизайна ландшафтов, интерьеров. Мы изготавливаем изделия практически любых форм и габаритов по каталогу, либо по индивидуальным чертежам.</p>
 					<p class="lead">
-						<a class="btn btn-danger btn-lg" href="#" role="button">Подробнее о нас</a>
+						<a class="btn sec-bg text-color btn-lg" href="#" role="button">Подробнее о нас</a>
 					</p>
 				</div>
 			</div>
@@ -96,7 +96,7 @@
 					</div>
 					<div class="col-12">
 
-						<div class="jumbotron jumbotron-fluid block-bg-color text-light py-5 my-2">
+						<div class="jumbotron jumbotron-fluid block-bg-color text-color py-5 my-2">
 							<div class="container">
 								<h3>Мы профессионалы высочайшего класса</h3>
 								<p class="lead">Мы используем весь свой многолетний опыт, чтобы сделать ваш дом или офис по настоящему уникальными.</p>
