--- a/assets/src/external_finish.html
+++ b/assets/src/external_finish.html
@@ -6,6 +6,7 @@
 	<title>Transform</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alice|Ledger|Prata" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
