--- a/assets/src/contacts.html
+++ b/assets/src/contacts.html
@@ -17,9 +17,7 @@
 				<div class="contacts_and_map px-1 px-md-5">
 
 
-					<h1 class="text-center mt-4">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ
-						<div class="md-display-3">ТРАНСФОРМЪ</div>
-					</h1>
+					<h1 class="text-center mt-4">ФАБРИКА АРХИТЕКТУРНЫХ ЭЛЕМЕНТОВ ТРАНСФОРМЪ</h1>
 					<div>
 						<p class="my-4">Адрес: 350004, г. Краснодар, ул. Кожевенная, д. 18</p>
 						<p class="my-4">Телефон/факс: (861) 298-08-98, (861) 298-08-80 </p>
