--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -57,7 +57,7 @@
 					<hr class="my-2">
 					<p class="d-none">Производимые нами изделия успешно применяются в качестве архитектурного декора как для фасадов зданий, так и для украшения парков, дизайна ландшафтов, интерьеров. Мы изготавливаем изделия практически любых форм и габаритов по каталогу, либо по индивидуальным чертежам.</p>
 					<p class="lead">
-						<a class="btn sec-bg text-color btn-lg" href="#" role="button">Подробнее о нас</a>
+						<a class="btn sec-bg text-color btn-lg" href="about.html" role="button">Подробнее о нас</a>
 					</p>
 				</div>
 			</div>
