added new BG and logo, light color theme

--- a/assets/src/external_finish.html
+++ b/assets/src/external_finish.html
@@ -12,11 +12,11 @@
 <body>
 	<div class="container-fluid">
 		//= template/header.html
-		<div class="external_finished px-1 px-md-5">
+		<div class="external_finished p-1 px-md-5">
 			<section class="row">
 				<div class="col-12 col-md-9">
 					<main>
-						<section class="content-ex">
+						<section class="content-ex block-bg-color">
 							<h1>Элементы внешней отделки зданий</h1>
 							<p>Одно из важнейших направлений деятельности нашей компании — изготовление декоративных элементов из пенополистирола, которые впоследствии находят успешное применение для художественного оформления экстерьеров и ландшафтов зданий всевозможных архитектурных вековых традиций.</p>
 							<p>В представленном нами ниже кратком каталоге Вы не увидите ни одного размера декоративных элементов, потому что размеры, как и любые другие конфигурации и формы, мы хотели бы в качестве предложений или утверждений получать от Вас. А наши специалисты помогут Вам понять, сохранит ли в тех или иных размерах выбранная из каталога либо предложенная Вами деталь свои первоначально заданные пропорции.</p>
