--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -84,11 +84,11 @@
 								</div>
 							</div>
 						</a>
-						<a href="">
+						<a href="using_materials.html">
 							<div class="card-03 mb-1 mb-md-0 block-bg-color" id="#">
 								<div class="wrapper-blackout">
 									<h2>Используемые материалы</h2>
-									<p class="d-none d-md-block">Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
+									<p class="">Почитайте о материалах, их свойствах и эксплуатационных характеристиках здесь</p>
 								</div>
 							</div>
 						</a>
