--- a/assets/src/using_materials.html
+++ b/assets/src/using_materials.html
@@ -14,7 +14,7 @@
 		//= template/header.html
 		<section class="row">
 			<div class="col-12 col-md-9">
-				<div class="about_materials mt-4 px-1 px-md-5">
+				<div class="about_materials mt-4 px-1 px-md-5 block-bg-color">
 				<h1>Используемые материалы</h1>
 					<p>Мы работаем на российском рынке исключительно с сертифицированными системами, т.е. все покрытия, которые мы используем для нанесения на пенопластовые изделия, имеют все возможные соответствующие документы для систем теплоизоляции фасадов, включая одобрение Госстроя РФ.</p>
 
